--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "type": "module",
   "name": "fourchest",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "build:css": "tailwindcss -i ./src/styles.css -o ./dist/output.css --watch",
+    "start": "live-server ./",
+    "dev": "concurrently \"npm run build:css\" \"npm run start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,8 +15,10 @@
   "description": "",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "concurrently": "^7.6.0",
+    "live-server": "^1.2.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.17"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.0.15"
